main/default/objects/RuleFilter__c/fields/Comparison_Type__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Type__c</fullName>
    <label>Comparison Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>