main/default/objects/RuleFilter__c/fields/ComparisonOperator__c.field-meta.xml
<CustomField>
    <fullName>ComparisonOperator__c</fullName>
    <label>Comparison Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equal</fullName>
            </value>
            <value>
                <fullName>Not equal</fullName>
            </value>
            <value>
                <fullName>Greater than</fullName>
            </value>
            <value>
                <fullName>Greater or equal</fullName>
            </value>
            <value>
                <fullName>Less than</fullName>
            </value>
            <value>
                <fullName>Less or equal</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Contain</fullName>
            </value>
            <value>
                <fullName>Includes</fullName>
            </value>
            <value>
                <fullName>Excludes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>