main/default/objects/RuleFilter__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <referenceTo>Rule__c</referenceTo>
    <relationshipLabel>Rule Filters</relationshipLabel>
    <relationshipName>RuleFilters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>